Create basis of game board

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="container">
         <div class="game">
             <div class="box tl"></div>
-            <div class="box tt"></div>
+            <div class="box tc"></div>
             <div class="box tr"></div>
             <div class="box ml"></div>
-            <div class="box mm"></div>
+            <div class="box mc"></div>
             <div class="box mr"></div>
             <div class="box bl"></div>
-            <div class="box bm"></div>
+            <div class="box bc"></div>
             <div class="box br"></div>
         </div>
     </div>
