Add marker value placement and player switch functionality

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    <div class="container">
-        <div class="game">
-            <div class="box tl"></div>
-            <div class="box tc"></div>
-            <div class="box tr"></div>
-            <div class="box ml"></div>
-            <div class="box mc"></div>
-            <div class="box mr"></div>
-            <div class="box bl"></div>
-            <div class="box bc"></div>
-            <div class="box br"></div>
+    <div id="container">
+        <div id="game">
+            <div id="tl" class="box"></div>
+            <div id="tc" class="box"></div>
+            <div id="tr" class="box"></div>
+            <div id="ml" class="box"></div>
+            <div id="mc" class="box"></div>
+            <div id="mr" class="box"></div>
+            <div id="bl" class="box"></div>
+            <div id="bc" class="box"></div>
+            <div id="br" class="box"></div>
         </div>
     </div>
     <script src="./app.js"></script>
