--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <title>Tic-Tac-Toe</title>
 </head>
+
 <body>
-    <div id="container">
-        <div id="game">
-            <div id="tl" class="box"></div>
-            <div id="tc" class="box"></div>
-            <div id="tr" class="box"></div>
-            <div id="ml" class="box"></div>
-            <div id="mc" class="box"></div>
-            <div id="mr" class="box"></div>
-            <div id="bl" class="box"></div>
-            <div id="bc" class="box"></div>
-            <div id="br" class="box"></div>
+    <div id="main-container">
+        <div id="game-container">
+            <div id="current-turn">X's Turn</div>
+            <div id="winner" class="hide"></div>
+            <div id="game">
+                <div id="tl" class="box"></div>
+                <div id="tc" class="box"></div>
+                <div id="tr" class="box"></div>
+                <div id="ml" class="box"></div>
+                <div id="mc" class="box"></div>
+                <div id="mr" class="box"></div>
+                <div id="bl" class="box"></div>
+                <div id="bc" class="box"></div>
+                <div id="br" class="box"></div>
+            </div>
+            <button id="reset-game">Reset Game</button>
         </div>
+    </div>
     </div>
     <script src="./app.js"></script>
 </body>
+
 </html>
